// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`enzyme.mount 1`] = `
.css-15kw3th,
[data-css-15kw3th] {
  -ms-flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-box-direction: normal;
  -webkit-box-orient: vertical;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-align: center;
  -webkit-justify-content: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  background-color: black;
  margin: auto;
  justify-content: center;
  flex-direction: column;
  align-items: center;
}

<StyledContainer>
  <div
    className="css-15kw3th"
  />
</StyledContainer>
`;

exports[`enzyme.mount 2`] = `
.css-1rsl166,
[data-css-1rsl166] {
  -webkit-flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-box-direction: normal;
  -webkit-box-orient: vertical;
  -webkit-box-align: center;
  -ms-flex-align: center;
  -webkit-justify-content: center;
  -webkit-align-items: center;
  -ms-flex-direction: column;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  max-width: 50em;
  min-height: 100vh;
  background-color: black;
  margin: auto;
  justify-content: center;
  flex-direction: column;
  align-items: center;
}

<StyledContainer
  size={true}
>
  <div
    className="css-1rsl166"
  />
</StyledContainer>
`;

exports[`enzyme.mount 3`] = `
.css-vk91ra,
[data-css-vk91ra] {
  -ms-flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-box-direction: normal;
  -webkit-box-orient: vertical;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-align: center;
  -webkit-justify-content: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  background-color: red;
  margin: auto;
  justify-content: center;
  flex-direction: column;
  align-items: center;
}

<StyledContainer
  color={true}
>
  <div
    className="css-vk91ra"
  />
</StyledContainer>
`;

exports[`enzyme.render 1`] = `
.css-15kw3th,
[data-css-15kw3th] {
  -ms-flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-box-direction: normal;
  -webkit-box-orient: vertical;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-align: center;
  -webkit-justify-content: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  background-color: black;
  margin: auto;
  justify-content: center;
  flex-direction: column;
  align-items: center;
}

<div
  class="css-15kw3th"
/>
`;

exports[`enzyme.render 2`] = `
.css-1rsl166,
[data-css-1rsl166] {
  -webkit-flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-box-direction: normal;
  -webkit-box-orient: vertical;
  -webkit-box-align: center;
  -ms-flex-align: center;
  -webkit-justify-content: center;
  -webkit-align-items: center;
  -ms-flex-direction: column;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  max-width: 50em;
  min-height: 100vh;
  background-color: black;
  margin: auto;
  justify-content: center;
  flex-direction: column;
  align-items: center;
}

<div
  class="css-1rsl166"
/>
`;

exports[`enzyme.render 3`] = `
.css-vk91ra,
[data-css-vk91ra] {
  -ms-flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-box-direction: normal;
  -webkit-box-orient: vertical;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-align: center;
  -webkit-justify-content: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  background-color: red;
  margin: auto;
  justify-content: center;
  flex-direction: column;
  align-items: center;
}

<div
  class="css-vk91ra"
/>
`;

exports[`enzyme.shallow 1`] = `
.css-15kw3th,
[data-css-15kw3th] {
  -ms-flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-box-direction: normal;
  -webkit-box-orient: vertical;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-align: center;
  -webkit-justify-content: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  background-color: black;
  margin: auto;
  justify-content: center;
  flex-direction: column;
  align-items: center;
}

<div
  className="css-15kw3th"
/>
`;

exports[`enzyme.shallow 2`] = `
.css-1rsl166,
[data-css-1rsl166] {
  -webkit-flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-box-direction: normal;
  -webkit-box-orient: vertical;
  -webkit-box-align: center;
  -ms-flex-align: center;
  -webkit-justify-content: center;
  -webkit-align-items: center;
  -ms-flex-direction: column;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  max-width: 50em;
  min-height: 100vh;
  background-color: black;
  margin: auto;
  justify-content: center;
  flex-direction: column;
  align-items: center;
}

<div
  className="css-1rsl166"
/>
`;

exports[`enzyme.shallow 3`] = `
.css-vk91ra,
[data-css-vk91ra] {
  -ms-flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-box-direction: normal;
  -webkit-box-orient: vertical;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-align: center;
  -webkit-justify-content: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  background-color: red;
  margin: auto;
  justify-content: center;
  flex-direction: column;
  align-items: center;
}

<div
  className="css-vk91ra"
/>
`;
